COH-29436: Change range filters to use NavigableMap instead of SortedMap (v14.1.1.2206 -> ce/v22.06)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v22.06/": change = 107801]