@@ -1,17 +1,20 @@
 /*
- * Copyright (c) 2000, 2022, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2024, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
- * http://oss.oracle.com/licenses/upl.
+ * https://oss.oracle.com/licenses/upl.
  */
 package com.tangosol.util.filter;
+
+import com.oracle.coherence.common.collections.NullableSortedMap;
+
+import java.util.List;
 
 import org.junit.Test;
 import org.junit.runners.Parameterized;
 import org.junit.runner.RunWith;
 
 import com.tangosol.util.MapIndex;
-import com.tangosol.util.SafeSortedMap;
 import com.tangosol.util.extractor.IdentityExtractor;
 
 import java.util.Map;
@@ -29,6 +32,7 @@ import static org.mockito.Mockito.*;
 *
 * @author tb 2010.2.08
 */
+@SuppressWarnings({"unchecked", "rawtypes"})
 @RunWith(value = Parameterized.class)
 public class LessFilterTest
     {
@@ -39,7 +43,7 @@ public class LessFilterTest
         m_fPartial = fPartial;
         }
 
-    @Parameterized.Parameters
+    @Parameterized.Parameters(name ="ordered={0} partial={1}")
     public static Collection data() {
        Object[][] data = new Object[][]
             { new Object[] {Boolean.FALSE, Boolean.FALSE},
@@ -79,12 +83,12 @@ public class LessFilterTest
             setKeys.add("key7");
             }
 
-        Map mapInverse = new SafeSortedMap();
-        mapInverse.put(1, new HashSet(Arrays.asList("key1")));
-        mapInverse.put(2, new HashSet(Arrays.asList("key2")));
-        mapInverse.put(3, new HashSet(Arrays.asList("key3")));
-        mapInverse.put(4, new HashSet(Arrays.asList("key4")));
-        mapInverse.put(5, new HashSet(Arrays.asList("key5")));
+        Map mapInverse = new NullableSortedMap();
+        mapInverse.put(1, new HashSet(List.of("key1")));
+        mapInverse.put(2, new HashSet(List.of("key2")));
+        mapInverse.put(3, new HashSet(List.of("key3")));
+        mapInverse.put(4, new HashSet(List.of("key4")));
+        mapInverse.put(5, new HashSet(List.of("key5")));
 
         // set mock expectations
         when(index.isOrdered()).thenReturn(m_fOrdered);
@@ -92,6 +96,8 @@ public class LessFilterTest
         when(index.getIndexContents()).thenReturn(mapInverse);
 
         // begin test
+        assertEquals(2, filter.calculateEffectiveness(mapIndexes, setKeys));
+
         filter.applyIndex(mapIndexes, setKeys);
 
         assertEquals("Two keys should remain in the set of keys.",
@@ -104,10 +110,10 @@ public class LessFilterTest
     /**
     * Run the test with an ordered index.
     */
-    private boolean m_fOrdered;
+    private final boolean m_fOrdered;
 
     /**
-    * Run the test with an partial index.
+    * Run the test with a partial index.
     */
-    private boolean m_fPartial;
+    private final boolean m_fPartial;
     }
